[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cookware.gd" type="Script" id=1]

<<<<<<< HEAD
[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

=======
>>>>>>> 81503239a670b9339efd9e75c849d3bda9c9a155
[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
<<<<<<< HEAD
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
color = Color( 0.164706, 0.8, 0.698039, 1 )

[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]
=======
>>>>>>> 81503239a670b9339efd9e75c849d3bda9c9a155
